--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "csstype": "^3.1.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
   }
