--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "csstype": "^3.1.3",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
+  },
+  "dependencies": {
+    "clsx": "^2.0.0"
   }
 }
